--- a/Thessis/Blowout Prediction (Model only).ipynb
+++ b/Thessis/Blowout Prediction (Model only).ipynb
@@ -16,11 +16,277 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 166,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Manufacturer</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Category Path 1</th>\n",
+       "      <th>Category Path 2</th>\n",
+       "      <th>Category Path 3</th>\n",
+       "      <th>Price(USD)</th>\n",
+       "      <th>Cost price</th>\n",
+       "      <th>Inventory</th>\n",
+       "      <th>Shipping</th>\n",
+       "      <th>Profit</th>\n",
+       "      <th>weight(lb)</th>\n",
+       "      <th>SaleRateNew</th>\n",
+       "      <th>Blowout</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Supermicro</td>\n",
+       "      <td>Power Cable</td>\n",
+       "      <td>Component</td>\n",
+       "      <td>Cable</td>\n",
+       "      <td>Power Cable</td>\n",
+       "      <td>10.25</td>\n",
+       "      <td>7.6875</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0625</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>ASUS</td>\n",
+       "      <td>Bag &amp; Sleeve</td>\n",
+       "      <td>PC &amp; Laptop</td>\n",
+       "      <td>Accessory</td>\n",
+       "      <td>Bag &amp; Sleeve</td>\n",
+       "      <td>9.23</td>\n",
+       "      <td>4.2300</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2.5000</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>AMD</td>\n",
+       "      <td>Others</td>\n",
+       "      <td>Component</td>\n",
+       "      <td>CPU / Processor</td>\n",
+       "      <td>Desktop CPU</td>\n",
+       "      <td>76.88</td>\n",
+       "      <td>57.6600</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>16.7200</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>QNAP</td>\n",
+       "      <td>DDR3 1333</td>\n",
+       "      <td>Component</td>\n",
+       "      <td>DRAM Memory</td>\n",
+       "      <td>Notebook DRAM</td>\n",
+       "      <td>76.88</td>\n",
+       "      <td>57.6600</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>19.2200</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Supermicro</td>\n",
+       "      <td>Accessory</td>\n",
+       "      <td>Hardware &amp; Software</td>\n",
+       "      <td>Server &amp; Workstation</td>\n",
+       "      <td>Accessory</td>\n",
+       "      <td>92.76</td>\n",
+       "      <td>69.5700</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>20.6900</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4195</td>\n",
+       "      <td>NVIDIA</td>\n",
+       "      <td>Nvidia</td>\n",
+       "      <td>Component</td>\n",
+       "      <td>Video Card</td>\n",
+       "      <td>PCI Express Video Card</td>\n",
+       "      <td>3854.00</td>\n",
+       "      <td>2890.5000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>961.0000</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>0.370787</td>\n",
+       "      <td>2.696970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4196</td>\n",
+       "      <td>Supermicro</td>\n",
+       "      <td>Accessory</td>\n",
+       "      <td>Hardware &amp; Software</td>\n",
+       "      <td>Server &amp; Workstation</td>\n",
+       "      <td>Accessory</td>\n",
+       "      <td>20.50</td>\n",
+       "      <td>15.3750</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2.6250</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.377778</td>\n",
+       "      <td>2.647059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4197</td>\n",
+       "      <td>In Win</td>\n",
+       "      <td>2U</td>\n",
+       "      <td>Component</td>\n",
+       "      <td>Server</td>\n",
+       "      <td>Server Chassis</td>\n",
+       "      <td>72.00</td>\n",
+       "      <td>54.0000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>14.5000</td>\n",
+       "      <td>24.12</td>\n",
+       "      <td>0.377778</td>\n",
+       "      <td>2.647059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4198</td>\n",
+       "      <td>iStarUSA</td>\n",
+       "      <td>3U</td>\n",
+       "      <td>Component</td>\n",
+       "      <td>Server</td>\n",
+       "      <td>Server Chassis</td>\n",
+       "      <td>143.50</td>\n",
+       "      <td>107.6250</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>25.8750</td>\n",
+       "      <td>29.00</td>\n",
+       "      <td>0.377778</td>\n",
+       "      <td>2.647059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4199</td>\n",
+       "      <td>AeroCool</td>\n",
+       "      <td>ATX Mid Tower</td>\n",
+       "      <td>Component</td>\n",
+       "      <td>Case</td>\n",
+       "      <td>Computer Case</td>\n",
+       "      <td>92.25</td>\n",
+       "      <td>69.1875</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>19.5625</td>\n",
+       "      <td>18.50</td>\n",
+       "      <td>0.411111</td>\n",
+       "      <td>2.432432</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4200 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Manufacturer       Category      Category Path 1       Category Path 2  \\\n",
+       "0      Supermicro    Power Cable            Component                 Cable   \n",
+       "1            ASUS   Bag & Sleeve          PC & Laptop             Accessory   \n",
+       "2             AMD         Others            Component       CPU / Processor   \n",
+       "3            QNAP      DDR3 1333            Component           DRAM Memory   \n",
+       "4      Supermicro      Accessory  Hardware & Software  Server & Workstation   \n",
+       "...           ...            ...                  ...                   ...   \n",
+       "4195       NVIDIA         Nvidia            Component            Video Card   \n",
+       "4196   Supermicro      Accessory  Hardware & Software  Server & Workstation   \n",
+       "4197       In Win             2U            Component                Server   \n",
+       "4198     iStarUSA             3U            Component                Server   \n",
+       "4199     AeroCool  ATX Mid Tower            Component                  Case   \n",
+       "\n",
+       "             Category Path 3  Price(USD)  Cost price  Inventory  Shipping  \\\n",
+       "0                Power Cable       10.25      7.6875          1       2.5   \n",
+       "1               Bag & Sleeve        9.23      4.2300          1       2.5   \n",
+       "2                Desktop CPU       76.88     57.6600          1       2.5   \n",
+       "3              Notebook DRAM       76.88     57.6600          1       0.0   \n",
+       "4                  Accessory       92.76     69.5700          1       2.5   \n",
+       "...                      ...         ...         ...        ...       ...   \n",
+       "4195  PCI Express Video Card     3854.00   2890.5000          1       2.5   \n",
+       "4196               Accessory       20.50     15.3750          1       2.5   \n",
+       "4197          Server Chassis       72.00     54.0000          1       3.5   \n",
+       "4198          Server Chassis      143.50    107.6250          1      10.0   \n",
+       "4199           Computer Case       92.25     69.1875          1       3.5   \n",
+       "\n",
+       "        Profit  weight(lb)  SaleRateNew      Blowout  \n",
+       "0       0.0625        1.00     0.000000  1000.000000  \n",
+       "1       2.5000        0.50     0.000000  1000.000000  \n",
+       "2      16.7200        0.74     0.000000  1000.000000  \n",
+       "3      19.2200        0.10     0.000000  1000.000000  \n",
+       "4      20.6900        0.50     0.000000  1000.000000  \n",
+       "...        ...         ...          ...          ...  \n",
+       "4195  961.0000        5.00     0.370787     2.696970  \n",
+       "4196    2.6250        0.50     0.377778     2.647059  \n",
+       "4197   14.5000       24.12     0.377778     2.647059  \n",
+       "4198   25.8750       29.00     0.377778     2.647059  \n",
+       "4199   19.5625       18.50     0.411111     2.432432  \n",
+       "\n",
+       "[4200 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import pandas_profiling\n",
@@ -28,12 +294,13 @@
     "data = pd.read_csv('ML_datafile.csv')\n",
     "data.reset_index(drop=True, inplace=True)\n",
     "data = data.drop(['Item No', 'Manufacturer No', 'Product Name', 'Date', 'STOCK TYPE', 'In Stock', 'List No',\n",
-    "                 'UPC Code', 'SaleRate'], axis=1)"
+    "                 'UPC Code', 'SaleRate'], axis=1)\n",
+    "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,15 +435,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-163-a0b714783a91>, line 13)",
+     "evalue": "invalid syntax (<ipython-input-170-9f9b077e43fb>, line 13)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-163-a0b714783a91>\"\u001b[1;36m, line \u001b[1;32m13\u001b[0m\n\u001b[1;33m    def test(models, X, Y, iterations = 100:\u001b[0m\n\u001b[1;37m                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-170-9f9b077e43fb>\"\u001b[1;36m, line \u001b[1;32m13\u001b[0m\n\u001b[1;33m    def test(models, X, Y, iterations = 10:\u001b[0m\n\u001b[1;37m                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
