--- a/Thessis/Blowout_Prediction_Model_only.ipynb
+++ b/Thessis/Blowout_Prediction_Model_only.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -65,13 +65,12 @@
    ],
    "source": [
     "from sklearn import preprocessing\n",
-    "nominal_data_2 = nominal_data\n",
     "# 1. INSTANTIATE\n",
     "enc = preprocessing.OneHotEncoder()\n",
     "# 2. FIT\n",
-    "enc.fit(nominal_data_2)\n",
+    "enc.fit(nominal_data)\n",
     "# 3. Transform\n",
-    "onehotlabels = enc.transform(nominal_data_2).toarray()\n",
+    "onehotlabels = enc.transform(nominal_data).toarray()\n",
     "print(onehotlabels.shape)"
    ]
   },
@@ -891,7 +890,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1696,7 +1697,7 @@
     }
    ],
    "source": [
-    "#Run the test with iterations\n",
+    "#Run the train with iterations\n",
     "%time result, models = train(models, X, Y, iterations=100)\n",
     "result"
    ]
@@ -3064,7 +3065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 78,
    "metadata": {
     "scrolled": true
    },
@@ -3135,8 +3136,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.145966</td>\n",
-       "      <td>47.956518</td>\n",
-       "      <td>59.500000</td>\n",
+       "      <td>48</td>\n",
+       "      <td>59</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2779</td>\n",
@@ -3159,8 +3160,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.034152</td>\n",
-       "      <td>29.280786</td>\n",
-       "      <td>62.000001</td>\n",
+       "      <td>29</td>\n",
+       "      <td>62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2011</td>\n",
@@ -3183,8 +3184,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.065497</td>\n",
-       "      <td>60.065883</td>\n",
-       "      <td>44.000000</td>\n",
+       "      <td>60</td>\n",
+       "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>986</td>\n",
@@ -3207,8 +3208,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.050416</td>\n",
-       "      <td>19.835068</td>\n",
-       "      <td>32.000000</td>\n",
+       "      <td>20</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3298</td>\n",
@@ -3231,8 +3232,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.034152</td>\n",
-       "      <td>29.280786</td>\n",
-       "      <td>83.999999</td>\n",
+       "      <td>29</td>\n",
+       "      <td>84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3707</td>\n",
@@ -3255,8 +3256,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.309761</td>\n",
-       "      <td>222.752615</td>\n",
-       "      <td>90.000000</td>\n",
+       "      <td>278</td>\n",
+       "      <td>112</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2967</td>\n",
@@ -3279,8 +3280,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.143250</td>\n",
-       "      <td>45.484364</td>\n",
-       "      <td>69.000000</td>\n",
+       "      <td>45</td>\n",
+       "      <td>69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1453</td>\n",
@@ -3303,8 +3304,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.133068</td>\n",
-       "      <td>45.010532</td>\n",
-       "      <td>40.000000</td>\n",
+       "      <td>45</td>\n",
+       "      <td>40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3849</td>\n",
@@ -3327,8 +3328,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.314828</td>\n",
-       "      <td>95.290228</td>\n",
-       "      <td>90.000000</td>\n",
+       "      <td>146</td>\n",
+       "      <td>138</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2871</td>\n",
@@ -3351,8 +3352,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>4.160688</td>\n",
-       "      <td>62.008970</td>\n",
-       "      <td>67.571429</td>\n",
+       "      <td>62</td>\n",
+       "      <td>68</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3384,22 +3385,22 @@
        "3849  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.314828   \n",
        "2871  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  4.160688   \n",
        "\n",
-       "      blowout_pred    blowout  \n",
-       "2424     47.956518  59.500000  \n",
-       "2779     29.280786  62.000001  \n",
-       "2011     60.065883  44.000000  \n",
-       "986      19.835068  32.000000  \n",
-       "3298     29.280786  83.999999  \n",
-       "3707    222.752615  90.000000  \n",
-       "2967     45.484364  69.000000  \n",
-       "1453     45.010532  40.000000  \n",
-       "3849     95.290228  90.000000  \n",
-       "2871     62.008970  67.571429  \n",
+       "      blowout_pred  blowout  \n",
+       "2424            48       59  \n",
+       "2779            29       62  \n",
+       "2011            60       44  \n",
+       "986             20       32  \n",
+       "3298            29       84  \n",
+       "3707           278      112  \n",
+       "2967            45       69  \n",
+       "1453            45       40  \n",
+       "3849           146      138  \n",
+       "2871            62       68  \n",
        "\n",
        "[10 rows x 467 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3407,10 +3408,91 @@
    "source": [
     "#blowout period identification using best performing algorithm\n",
     "X_test['y_pred'] = y_pred\n",
-    "X_test['blowout_pred'] = pd.DataFrame({\"Days\" : (X_test.Inventory - X_test.Qty_Remaining)  / X_test['y_pred']})\n",
-    "X_test['blowout'] = pd.DataFrame({\"Days\" : (X_test.Inventory - X_test.Qty_Remaining) / y_test})\n",
+    "X_test['blowout_pred'] = pd.DataFrame({\"Days\" : (X_test.Inventory)  / X_test['y_pred']})\n",
+    "X_test['blowout'] = pd.DataFrame({\"Days\" : (X_test.Inventory) / y_test})\n",
+    "X_test['blowout'] = X_test['blowout'].apply(round)\n",
+    "X_test['blowout_pred'] = X_test['blowout_pred'].apply(round)\n",
     "X_test.head(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Price(USD)</th>\n",
+       "      <th>Cost price</th>\n",
+       "      <th>Inventory</th>\n",
+       "      <th>Shipping</th>\n",
+       "      <th>weight(lb)</th>\n",
+       "      <th>Qty_Remaining</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>...</th>\n",
+       "      <th>451</th>\n",
+       "      <th>452</th>\n",
+       "      <th>453</th>\n",
+       "      <th>454</th>\n",
+       "      <th>455</th>\n",
+       "      <th>456</th>\n",
+       "      <th>457</th>\n",
+       "      <th>y_pred</th>\n",
+       "      <th>blowout_pred</th>\n",
+       "      <th>blowout</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 467 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Price(USD), Cost price, Inventory, Shipping, weight(lb), Qty_Remaining, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, ...]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 467 columns]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test[X_test['Inventory'] ==  X_test['Qty_Remaining']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
